# $Id: Makefile.am,v 1.3.4.1 2007-03-04 03:37:11 manav Exp $


fesystem_dbg:
	${MAKE} -C./build fesystem_dbg

fesystem_opt:
	${MAKE} -C./build fesystem_opt

fesystem_pro:
	${MAKE} -C./build fesystem_pro

fesystem_devel:
	${MAKE} -C./build fesystem_devel

all-local: fesystem_dbg fesystem_opt fesystem_pro fesystem_devel


SUBDIRS = build contrib


